# pypilot-boatimu

./: CMakeLists.txt  README.md  library.properties
.github/workflows/: ci.yml
examples/arduino/BoatImuSamplesExample/: BoatImuSamplesExample.ino
examples/linux/: print_boatimu_samples.cpp
src/: pypilot_boatimu.hpp
src/pypilot_boatimu/: adapters.hpp  alignment.hpp  data_model_writer.hpp  runtime.hpp  samples.hpp  source_policy.hpp
src/pypilot_boatimu/adapters/: generic_calibrated_sample_adapter.hpp  generic_fused_attitude_adapter.hpp  ocean_imu_adapter.hpp  replay_adapter.hpp  rtimulib2_adapter.hpp
tests/: test_adapters.cpp  test_data_model_writer.cpp  test_runtime.cpp  test_samples.cpp  test_source_alignment.cpp
